[package]
name = "spotify"
version = "0.7.1"
authors = ["Splitty <splittydev@gmail.com>"]
description = "Easy to use Spotify Local API abstractions."
readme = "README.md"
repository = "https://github.com/SplittyDev/spotify-rs"
documentation = "https://docs.rs/spotify"
keywords = ["Spotify", "API"]
license = "MIT"
build = "build.rs"

[lib]
name = "spotify"
path = "src/lib.rs"

[[bin]]
name = "spoticli"
path = "src/bin/spoticli.rs"

[dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2.2"
reqwest = "0.9"
json = "0.12.4"
time = "0.1"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"