[package]
name = "spotify"
version = "0.8.0"
authors = ["Splitty <splittydev@gmail.com>"]
description = "Easy to use Spotify Local API abstractions."
readme = "README.md"
repository = "https://github.com/SplittyDev/spotify-rs"
documentation = "https://docs.rs/spotify"
keywords = ["Spotify", "API"]
license = "MIT"
build = "build.rs"
edition = "2021"

[lib]
name = "spotify"
path = "src/lib.rs"

[[bin]]
name = "spoticli"
path = "src/bin/spoticli.rs"

[dependencies]
json = "0.12.4"
kernel32-sys = "0.2.2"
reqwest = "0.9"
time = "0.1"
winapi = { version = "0.3.9", features = ["tlhelp32"] }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
